chaos test; minor improvements to the specs
