# localstack-sdk/localstack/generated/api/chaos_api.py
@@ -38,149 +38,6 @@ class ChaosApi:
 
 
     @validate_call
-    def add_fault_rule(
-        self,
-        fault_rule: List[FaultRule],
-        _request_timeout: Union[
-            None,
-            Annotated[StrictFloat, Field(gt=0)],
-            Tuple[
-                Annotated[StrictFloat, Field(gt=0)],
-                Annotated[StrictFloat, Field(gt=0)]
-            ]
-        ] = None,
-        _request_auth: Optional[Dict[StrictStr, Any]] = None,
-        _content_type: Optional[StrictStr] = None,
-        _headers: Optional[Dict[StrictStr, Any]] = None,
-        _host_index: Annotated[StrictInt, Field(ge=0, le=0)] = 0,
-    ) -> List[FaultRule]:
-        """Add a rule to the current configuration
-
-        Add a new rule to the existing fault configuration.
-
-        :param fault_rule: (required)
-        :type fault_rule: List[FaultRule]
-        :param _request_timeout: timeout setting for this request. If one
-                                 number provided, it will be total request
-                                 timeout. It can also be a pair (tuple) of
-                                 (connection, read) timeouts.
-        :type _request_timeout: int, tuple(int, int), optional
-        :param _request_auth: set to override the auth_settings for an a single
-                              request; this effectively ignores the
-                              authentication in the spec for a single request.
-        :type _request_auth: dict, optional
-        :param _content_type: force content-type for the request.
-        :type _content_type: str, Optional
-        :param _headers: set to override the headers for a single
-                         request; this effectively ignores the headers
-                         in the spec for a single request.
-        :type _headers: dict, optional
-        :param _host_index: set to override the host_index for a single
-                            request; this effectively ignores the host_index
-                            in the spec for a single request.
-        :type _host_index: int, optional
-        :return: Returns the result object.
-        """ # noqa: E501
-
-        _param = self._add_fault_rule_serialize(
-            fault_rule=fault_rule,
-            _request_auth=_request_auth,
-            _content_type=_content_type,
-            _headers=_headers,
-            _host_index=_host_index
-        )
-
-        _response_types_map: Dict[str, Optional[str]] = {
-            '200': "List[FaultRule]",
-        }
-        response_data = self.api_client.call_api(
-            *_param,
-            _request_timeout=_request_timeout
-        )
-        response_data.read()
-        return self.api_client.response_deserialize(
-            response_data=response_data,
-            response_types_map=_response_types_map,
-        ).data
-
-    def _add_fault_rule_serialize(
-        self,
-        fault_rule,
-        _request_auth,
-        _content_type,
-        _headers,
-        _host_index,
-    ) -> RequestSerialized:
-
-        _host = None
-
-        _collection_formats: Dict[str, str] = {
-            'FaultRule': '',
-        }
-
-        _path_params: Dict[str, str] = {}
-        _query_params: List[Tuple[str, str]] = []
-        _header_params: Dict[str, Optional[str]] = _headers or {}
-        _form_params: List[Tuple[str, str]] = []
-        _files: Dict[
-            str, Union[str, bytes, List[str], List[bytes], List[Tuple[str, bytes]]]
-        ] = {}
-        _body_params: Optional[bytes] = None
-
-        # process the path parameters
-        # process the query parameters
-        # process the header parameters
-        # process the form parameters
-        # process the body parameter
-        if fault_rule is not None:
-            _body_params = fault_rule
-
-
-        # set the HTTP header `Accept`
-        if 'Accept' not in _header_params:
-            _header_params['Accept'] = self.api_client.select_header_accept(
-                [
-                    'application/json'
-                ]
-            )
-
-        # set the HTTP header `Content-Type`
-        if _content_type:
-            _header_params['Content-Type'] = _content_type
-        else:
-            _default_content_type = (
-                self.api_client.select_header_content_type(
-                    [
-                        'application/json'
-                    ]
-                )
-            )
-            if _default_content_type is not None:
-                _header_params['Content-Type'] = _default_content_type
-
-        # authentication setting
-        _auth_settings: List[str] = [
-        ]
-
-        return self.api_client.param_serialize(
-            method='PATCH',
-            resource_path='/localstack/chaos/faults',
-            path_params=_path_params,
-            query_params=_query_params,
-            header_params=_header_params,
-            body=_body_params,
-            post_params=_form_params,
-            files=_files,
-            auth_settings=_auth_settings,
-            collection_formats=_collection_formats,
-            _host=_host,
-            _request_auth=_request_auth
-        )
-
-
-
-
-    @validate_call
     def add_fault_rules(
         self,
         fault_rule: List[FaultRule],
@@ -197,9 +54,9 @@ class ChaosApi:
         _headers: Optional[Dict[StrictStr, Any]] = None,
         _host_index: Annotated[StrictInt, Field(ge=0, le=0)] = 0,
     ) -> List[FaultRule]:
-        """Add a new fault configuration
+        """Add rules to the current configuration
 
-        Add a new set of fault rules.
+        Add new rules to the existing fault configuration.
 
         :param fault_rule: (required)
         :type fault_rule: List[FaultRule]
@@ -306,8 +163,8 @@ class ChaosApi:
         ]
 
         return self.api_client.param_serialize(
-            method='POST',
-            resource_path='/localstack/chaos/faults',
+            method='PATCH',
+            resource_path='/_localstack/chaos/faults',
             path_params=_path_params,
             query_params=_query_params,
             header_params=_header_params,
@@ -324,9 +181,9 @@ class ChaosApi:
 
 
     @validate_call
-    def delete_fault_rule(
+    def delete_fault_rules(
         self,
-        fault_rule: FaultRule,
+        fault_rule: List[FaultRule],
         _request_timeout: Union[
             None,
             Annotated[StrictFloat, Field(gt=0)],
@@ -340,12 +197,12 @@ class ChaosApi:
         _headers: Optional[Dict[StrictStr, Any]] = None,
         _host_index: Annotated[StrictInt, Field(ge=0, le=0)] = 0,
     ) -> List[FaultRule]:
-        """Delete a rule from the configuration
+        """Delete rules from the configuration
 
-        Remove a rule from the fault configuration.
+        Remove rules from the fault configuration.
 
         :param fault_rule: (required)
-        :type fault_rule: FaultRule
+        :type fault_rule: List[FaultRule]
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -368,7 +225,7 @@ class ChaosApi:
         :return: Returns the result object.
         """ # noqa: E501
 
-        _param = self._delete_fault_rule_serialize(
+        _param = self._delete_fault_rules_serialize(
             fault_rule=fault_rule,
             _request_auth=_request_auth,
             _content_type=_content_type,
@@ -389,7 +246,7 @@ class ChaosApi:
             response_types_map=_response_types_map,
         ).data
 
-    def _delete_fault_rule_serialize(
+    def _delete_fault_rules_serialize(
         self,
         fault_rule,
         _request_auth,
@@ -401,6 +258,7 @@ class ChaosApi:
         _host = None
 
         _collection_formats: Dict[str, str] = {
+            'FaultRule': '',
         }
 
         _path_params: Dict[str, str] = {}
@@ -449,7 +307,7 @@ class ChaosApi:
 
         return self.api_client.param_serialize(
             method='DELETE',
-            resource_path='/localstack/chaos/faults',
+            resource_path='/_localstack/chaos/faults',
             path_params=_path_params,
             query_params=_query_params,
             header_params=_header_params,
@@ -571,7 +429,7 @@ class ChaosApi:
 
         return self.api_client.param_serialize(
             method='GET',
-            resource_path='/localstack/chaos/faults',
+            resource_path='/_localstack/chaos/faults',
             path_params=_path_params,
             query_params=_query_params,
             header_params=_header_params,
@@ -693,7 +551,150 @@ class ChaosApi:
 
         return self.api_client.param_serialize(
             method='GET',
-            resource_path='/localstack/chaos/effects',
+            resource_path='/_localstack/chaos/effects',
+            path_params=_path_params,
+            query_params=_query_params,
+            header_params=_header_params,
+            body=_body_params,
+            post_params=_form_params,
+            files=_files,
+            auth_settings=_auth_settings,
+            collection_formats=_collection_formats,
+            _host=_host,
+            _request_auth=_request_auth
+        )
+
+
+
+
+    @validate_call
+    def set_fault_rules(
+        self,
+        fault_rule: List[FaultRule],
+        _request_timeout: Union[
+            None,
+            Annotated[StrictFloat, Field(gt=0)],
+            Tuple[
+                Annotated[StrictFloat, Field(gt=0)],
+                Annotated[StrictFloat, Field(gt=0)]
+            ]
+        ] = None,
+        _request_auth: Optional[Dict[StrictStr, Any]] = None,
+        _content_type: Optional[StrictStr] = None,
+        _headers: Optional[Dict[StrictStr, Any]] = None,
+        _host_index: Annotated[StrictInt, Field(ge=0, le=0)] = 0,
+    ) -> List[FaultRule]:
+        """Add a new fault configuration
+
+        Overwrite the set of fault rules with a new configuration.
+
+        :param fault_rule: (required)
+        :type fault_rule: List[FaultRule]
+        :param _request_timeout: timeout setting for this request. If one
+                                 number provided, it will be total request
+                                 timeout. It can also be a pair (tuple) of
+                                 (connection, read) timeouts.
+        :type _request_timeout: int, tuple(int, int), optional
+        :param _request_auth: set to override the auth_settings for an a single
+                              request; this effectively ignores the
+                              authentication in the spec for a single request.
+        :type _request_auth: dict, optional
+        :param _content_type: force content-type for the request.
+        :type _content_type: str, Optional
+        :param _headers: set to override the headers for a single
+                         request; this effectively ignores the headers
+                         in the spec for a single request.
+        :type _headers: dict, optional
+        :param _host_index: set to override the host_index for a single
+                            request; this effectively ignores the host_index
+                            in the spec for a single request.
+        :type _host_index: int, optional
+        :return: Returns the result object.
+        """ # noqa: E501
+
+        _param = self._set_fault_rules_serialize(
+            fault_rule=fault_rule,
+            _request_auth=_request_auth,
+            _content_type=_content_type,
+            _headers=_headers,
+            _host_index=_host_index
+        )
+
+        _response_types_map: Dict[str, Optional[str]] = {
+            '200': "List[FaultRule]",
+        }
+        response_data = self.api_client.call_api(
+            *_param,
+            _request_timeout=_request_timeout
+        )
+        response_data.read()
+        return self.api_client.response_deserialize(
+            response_data=response_data,
+            response_types_map=_response_types_map,
+        ).data
+
+    def _set_fault_rules_serialize(
+        self,
+        fault_rule,
+        _request_auth,
+        _content_type,
+        _headers,
+        _host_index,
+    ) -> RequestSerialized:
+
+        _host = None
+
+        _collection_formats: Dict[str, str] = {
+            'FaultRule': '',
+        }
+
+        _path_params: Dict[str, str] = {}
+        _query_params: List[Tuple[str, str]] = []
+        _header_params: Dict[str, Optional[str]] = _headers or {}
+        _form_params: List[Tuple[str, str]] = []
+        _files: Dict[
+            str, Union[str, bytes, List[str], List[bytes], List[Tuple[str, bytes]]]
+        ] = {}
+        _body_params: Optional[bytes] = None
+
+        # process the path parameters
+        # process the query parameters
+        # process the header parameters
+        # process the form parameters
+        # process the body parameter
+        if fault_rule is not None:
+            _body_params = fault_rule
+
+
+        # set the HTTP header `Accept`
+        if 'Accept' not in _header_params:
+            _header_params['Accept'] = self.api_client.select_header_accept(
+                [
+                    'application/json'
+                ]
+            )
+
+        # set the HTTP header `Content-Type`
+        if _content_type:
+            _header_params['Content-Type'] = _content_type
+        else:
+            _default_content_type = (
+                self.api_client.select_header_content_type(
+                    [
+                        'application/json'
+                    ]
+                )
+            )
+            if _default_content_type is not None:
+                _header_params['Content-Type'] = _default_content_type
+
+        # authentication setting
+        _auth_settings: List[str] = [
+        ]
+
+        return self.api_client.param_serialize(
+            method='POST',
+            resource_path='/_localstack/chaos/faults',
             path_params=_path_params,
             query_params=_query_params,
             header_params=_header_params,
@@ -835,7 +836,7 @@ class ChaosApi:
 
         return self.api_client.param_serialize(
             method='POST',
-            resource_path='/localstack/chaos/effects',
+            resource_path='/_localstack/chaos/effects',
             path_params=_path_params,
             query_params=_query_params,
             header_params=_header_params,
